--- a/src/lab/exp2/Introduction.html
+++ b/src/lab/exp2/Introduction.html
@@ -101,7 +101,7 @@
 <h1 class="text-h2-lightblue">Free vibration of S.D.O.F system</h1><div class="content" id="experiment-article-section-1-content">
 <p align="justify">
             Free vibration is a vibration in which energy is neither added to nor removed from the vibrating system. It will just keep vibrating forever at the same amplitude or a structure is said to be undergoing free vibration when it is disturbed from its static equilibrium position without any external dynamic excitation.<br><br>
-<img src="freeVib.jpg"/>
+<img style="max-width: 100%; height: auto;" src="freeVib.jpg"/>
 </br></br></p>
 </div>						</div>
 					</div>
