--- a/src/lab/exp7/Theory.html
+++ b/src/lab/exp7/Theory.html
@@ -106,7 +106,7 @@
 <img src="Expr6-3.png">-- vertical ground acceleration are ..
 </img></br></img></br></br></br></img></p>
 <p>
-<a href="7.Theory.pdf" target="_blank">Read More</a>
+<a style="max-width: 100%; height: auto;" href="7.Theory.pdf" target="_blank">Read More</a>
 </p>
 </div>						</div>
 					</div>
