added prerequisites document

--- a/src/lab/Prerequisites.html
+++ b/src/lab/Prerequisites.html
@@ -109,9 +109,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <li>Adobe Flash (formerly Macromedia Flash) is a multimedia platform used to add animation, video, and interactivity to web pages. </li>
 </ul>
 <a href="documents/installFlash.html">Install Flash Plugin to run the Simulation</a><br/><br/>
-<a href="documents/installJava.html">Install Java Plugin to run the Simulation</a><br/><br/>
-<a href="documents/installJava3D.html">Install Java3D Plugin to run the Simulation</a>
-<br/><br/><br/><br/><p></p>
+<a href="documents/prerequisites.pdf">Install the dependencies to run the simulations</a><br/><br/>
+<br/><p></p>
 </div>						</div>
 					</div>
 			</div>
