commented java simulations

--- a/src/lab/exp10/Experiment.html
+++ b/src/lab/exp10/Experiment.html
@@ -103,8 +103,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p>
 <a href="vibration-control1.html" target="_blank">Go to Flash view on Vibration Control - Tuned Mass Damper(Click here)</a><br/><br/>
 <a href="tld.swf" target="_blank">Go to Flash view on Vibration Control - Tuned Liquid Damper(Click here)</a><br/><br/>
-<a href="ve_vibrationcontrol.html" target="_blank">Go to Virtual lab on Vibration Control(Click here)</a>
-<br/><br/><br/><br/></p>
+<!-- <a href="ve_vibrationcontrol.html" target="_blank">Go to Virtual lab on Vibration Control(Click here)</a>
+ --><br/><br/><br/><br/></p>
 </div>						</div>
 					</div>
 			</div>
