--- a/src/lab/exp2/Experiment.html
+++ b/src/lab/exp2/Experiment.html
@@ -103,7 +103,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p>
 <a href="undamped_freevib.html" target="_blank">Go to Flash view on Free Vibration of S.D.O.F system - Undamped Free Vibration(Click here)</a><br/><br/>
 <a href="dampedfree.html" target="_blank">Go to Flash view on Free Vibration of S.D.O.F system - Damped Free Vibration(Click here)</a><br/><br/>
-<a href="ve_freevibbody.html" target="_blank">Go to Virtual lab on Free Vibration of S.D.O.F system(Click here)</a>
+<!-- <a href="ve_freevibbody.html" target="_blank">Go to Virtual lab on Free Vibration of S.D.O.F system(Click here)</a> -->
 <br/><br/><br/><br/></p>
 </div>						</div>
 					</div>
