--- a/src/lab/exp3/Experiment.html
+++ b/src/lab/exp3/Experiment.html
@@ -103,7 +103,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p>
 <a href="undamped_forced.html" target="_blank">Go to Flash view on Forced Vibration of S.D.O.F system - Undamped Forced Vibration(Click here)</a><br/><br/>
 <a href="DampedForced.html" target="_blank">Go to Flash view on Forced Vibration of S.D.O.F system - Damped Forced Vibration(Click here)</a><br/><br/>
-<a href="ve_forcedvibbody.html" target="_blank">Go to Virtual lab on Forced Vibration of S.D.O.F system(Click here)</a>
+<!-- <a href="ve_forcedvibbody.html" target="_blank">Go to Virtual lab on Forced Vibration of S.D.O.F system(Click here)</a> -->
 <br/><br/><br/><br/></p>
 </div>						</div>
 					</div>
