--- a/src/lab/exp1/Experiment.html
+++ b/src/lab/exp1/Experiment.html
@@ -102,7 +102,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <h1 class="text-h2-lightblue">Simple Harmonic Oscillator</h1><div class="content" id="experiment-article-section-4-content">
 <p>
 <a href="exp1.html" target="_blank">Go to Flash view on Simple Harmonic Oscillator Experiment(Click here)</a><br/><br/>
-<a href="ve_pendulum.html" target="_blank">Go to Virtual lab on Simple Harmonic Oscillator Experiment(Click here)</a>
+<!-- <a href="ve_pendulum.html" target="_blank">Go to Virtual lab on Simple Harmonic Oscillator Experiment(Click here)</a> -->
 <br/><br/></p>
 </div>						</div>
 					</div>
