--- a/src/lab/exp4/Experiment.html
+++ b/src/lab/exp4/Experiment.html
@@ -102,7 +102,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <h1 class="text-h2-lightblue">Impulse Response of S.D.O.F system</h1><div class="content" id="experiment-article-section-4-content">
 <p>
 <a href="Impluse.html" target="_blank">Go to Flash view on Impulse Response of S.D.O.F system(Click here)</a><br/><br/>
-<a href="ve_impulse.html" target="_blank">Go to Virtual lab on Impulse Response of S.D.O.F system(Click here)</a>
+<!-- <a href="ve_impulse.html" target="_blank">Go to Virtual lab on Impulse Response of S.D.O.F system(Click here)</a> -->
 <br/><br/></p>
 </div>						</div>
 					</div>
