--- a/src/lab/exp7/Experiment.html
+++ b/src/lab/exp7/Experiment.html
@@ -102,7 +102,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <h1 class="text-h2-lightblue">Behaviour of Rigid Blocks</h1><div class="content" id="experiment-article-section-4-content">
 <p>
 <a href="dem.htm" target="_blank">Go to Flash view on Behaviour of Rigid Blocks(Click here)</a><br/><br/>
-<a href="ve_shakebody.html" target="_blank">Go to Virtual lab on Behaviour of Rigid Blocks(Click here)</a>
+<!-- <a href="ve_shakebody.html" target="_blank">Go to Virtual lab on Behaviour of Rigid Blocks(Click here)</a> -->
 <br/><br/></p>
 </div>						</div>
 					</div>
