--- a/src/lab/exp8/Experiment.html
+++ b/src/lab/exp8/Experiment.html
@@ -102,7 +102,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <h1 class="text-h2-lightblue">Torsional Response of Building</h1><div class="content" id="experiment-article-section-4-content">
 <p>
 <a href="torsion6.html" target="_blank">Go to Flash view on Torsional Response of Building(Click here)</a><br/><br/>
-<a href="ve_torsion.html" target="_blank">Go to Virtual lab on Torsional Response of Building(Click here)</a>
+<!-- <a href="ve_torsion.html" target="_blank">Go to Virtual lab on Torsional Response of Building(Click here)</a> -->
 <br/><br/></p>
 </div>						</div>
 					</div>
