--- a/src/lab/Prerequisites.html
+++ b/src/lab/Prerequisites.html
@@ -100,15 +100,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							
 							<!--edit -->
 <h1 class="text-h2-lightblue">Welcome to Structural Dynamics lab!</h1><div>
-<p>
-</p><ul>
-<li>Java allows you to play online virtual labs.</li>
-<li>The Java 3D API enables the creation of three-dimensional graphics applications and Internet-based 3D applets. It provides high-level constructs for creating and manipulation 3D geometry and building the structures used in rendering that geometry. With this software, you can efficiently define and render very large virtual worlds.</li>
-<li>Adobe Flash (formerly Macromedia Flash) is a multimedia platform used to add animation, video, and interactivity to web pages. </li>
+<p>Required Software Dependencies to run the Simulations</p>
+<ul>
+<li>1. Adobe Flash Plugin, Java1.6, Java3D 1.5.2 (The Java 3D API enables the creation of three-dimensional graphics applications and Internet-based 3D applets)</li> 
+<li>2. Browsers Firefox 50 and it's below versions, internet explorer.</li>
+<li>3. IcedTea Plugin for Linux Operating System.
+<li>4. <a href="documents/installFlash.html">Install Flash Plugin to run the Simulation</a></li>
+<li>5. Virtual Labs offers a free download of a customized VirtualBox with the required pre installed software dependencies(Java 1.6, Java3D-1.5.2, IcedTea PLugin and Adobe Flash PLugin). Please follow the <a href="https://docs.google.com/document/d/1mX0YMtFk4Dxn_vQBJmUJ8pIOPE2hVf6AscJMdLWd9k8/edit#">link</a> to download, install and use VirtualBox for Virtual Labs.</li>
 </ul>
-<a href="documents/installFlash.html">Install Flash Plugin to run the Simulation</a><br/><br/>
-<a href="documents/prerequisites.pdf">Install the dependencies to run the simulations</a><br/><br/>
-<br/><p></p>
+<br/>
 </div>						</div>
 					</div>
 			</div>
