--- a/src/lab/Prerequisites.html
+++ b/src/lab/Prerequisites.html
@@ -100,14 +100,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							
 							<!--edit -->
 <h1 class="text-h2-lightblue">Welcome to Structural Dynamics lab!</h1><div>
-<p>Required Software Dependencies to run the Simulations</p>
-<ul>
-<li>1. Adobe Flash Plugin, Java1.6, Java3D 1.5.2 (The Java 3D API enables the creation of three-dimensional graphics applications and Internet-based 3D applets)</li> 
-<li>2. Browsers Firefox 50 and it's below versions, internet explorer.</li>
-<li>3. IcedTea Plugin for Linux Operating System.
-<li>4. <a href="documents/installFlash.html">Install Flash Plugin to run the Simulation</a></li>
-<li>5. Virtual Labs offers a free download of a customized VirtualBox with the required pre installed software dependencies(Java 1.6, Java3D-1.5.2, IcedTea PLugin and Adobe Flash PLugin). Please follow the <a href="https://docs.google.com/document/d/1mX0YMtFk4Dxn_vQBJmUJ8pIOPE2hVf6AscJMdLWd9k8/edit#">link</a> to download, install and use VirtualBox for Virtual Labs.</li>
-</ul>
+<p> - This lab requires few Software Dependencies to run the Simulations </p>
+<ol>
+<li> Adobe Flash Plugin, Java1.7, Java3D 1.5.2 (The Java 3D API enables the creation of three-dimensional graphics applications and Internet-based 3D applets)</li>
+<li> Browsers Firefox 50 and it's below versions, internet explorer.</li>
+<li> IcedTea Plugin for Linux Operating System.</li>
+</ol>
+<p> - We recommend the following for the smooth running of these simulations</p>
+<ol>
+<li> Install Adobe Flash Plugin - This will enable you to run the experiments that need Flash support. Please follow the  <a href="documents/installFlash.html">link</a> to install the Flash Plugin</li>
+<li> Install VirtualBox - Virtual Labs offers a free download of a customized VirtualBox with the required pre installed all the software dependencies(Java 1.7, Java3D-1.5.2, IcedTea Plugin and Adobe Flash Plugin). Please follow the <a href="https://docs.google.com/document/d/1mX0YMtFk4Dxn_vQBJmUJ8pIOPE2hVf6AscJMdLWd9k8/edit#">link</a> to download, install and use VirtualBox for Virtual Labs.</li>
+</ol>
 <br/>
 </div>						</div>
 					</div>
