--- a/src/lab/exp5/Experiment.html
+++ b/src/lab/exp5/Experiment.html
@@ -99,8 +99,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							<!--edit -->
 <h1 class="text-h2-lightblue">Concept of Response Spectrum</h1><div class="content" id="experiment-article-section-4-content">
 <p>
-<a href="responsespectrum.avi" target="_blank">Go to Flash view on Concept of Response Spectrum(Click here)</a><br/><br/>
-<a href="responsespectrum.swf" target="_blank">Go to Flash view on Concept of Response Spectrum(Click here)</a><br/><br/>
+<!-- <a href="responsespectrum.avi" target="_blank">Go to Flash view on Concept of Response Spectrum(Click here)</a><br/><br/>
+ --><a href="responsespectrum.swf" target="_blank">Go to Flash view on Concept of Response Spectrum(Click here)</a><br/><br/>
 
 <!-- <a href="ve_responseSpecturm.html" target="_blank">Go to Virtual lab on Concept of Response Spectrum(Click here)</a> -->
 <br/><br/></p>
