--- a/src/lab/Prerequisites.html
+++ b/src/lab/Prerequisites.html
@@ -100,18 +100,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						<div class="col-md-10 lab-list-col-10">
 							
 							<!--edit -->
-<h1 class="text-h2-lightblue">Welcome to Structural Dynamics lab!</h1><div>
-<p> - This lab requires few Software Dependencies to run the Simulations </p>
-<ol>
-<li> Adobe Flash Plugin, Java1.7, Java3D 1.5.2 (The Java 3D API enables the creation of three-dimensional graphics applications and Internet-based 3D applets)</li>
-<li> Browsers Firefox 50 and it's below versions, internet explorer.</li>
-<li> IcedTea Plugin for Linux Operating System.</li>
-</ol>
-<p> - We recommend the following for the smooth running of these simulations</p>
-<ol>
-<li> Install Adobe Flash Plugin - This will enable you to run the experiments that need Flash support. Please follow the  <a href="documents/installFlash.html">link</a> to install the Flash Plugin</li>
-<li> Install VirtualBox - Virtual Labs offers a free download of a customized VirtualBox with the required pre installed all the software dependencies(Java 1.7, Java3D-1.5.2, IcedTea Plugin and Adobe Flash Plugin). Please follow the <a href="https://docs.google.com/document/d/1mX0YMtFk4Dxn_vQBJmUJ8pIOPE2hVf6AscJMdLWd9k8/edit#">link</a> to download, install and use VirtualBox for Virtual Labs.</li>
-</ol>
+<h1 class="text-h1-lightblue">Welcome to Structural Dynamics lab!</h1><div>
+<p>
+	The current version of the Virtual Lab applets pages requires a web browser and the Java plug-in (version 1.5.0_11 or later is recommended). The Java plug-in is part of the Java Runtime Environment (JRE) . You may check whether Java is installed correctly by visiting the <a href="">Test Your Java</a> Version page on the Sun web site. In addition to testing the Java installation, you will obtain information on the installed version of Java.</p>
+
+<ol>    
+	<li>Java allows you to play online virtual labs.</li>
+    <li>Adobe Flash (formerly Macromedia Flash) is a multimedia platform used to add animation, video, and interactivity to web pages.</li>
+
+<p>Install Java plugin to run the simulation.</p>
+
+</p>
 <br/>
 </div>						</div>
 					</div>
