--- a/src/lab/index.html
+++ b/src/lab/index.html
@@ -43,7 +43,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			                    <span class="icon-bar" style="background-color: #77BB41"></span>
 			                    <span class="icon-bar" style="background-color: #77BB41"></span>
 			                </button>
-			                <a class="navbar-brand main-logo-a" href="http://vlabs.ac.in/index.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!"><img class="img-responsive main-logo" src="images/logo-new.png"/></a>
+			                <a class="navbar-brand main-logo-a" href="http://vlab.co.in"><img class="img-responsive main-logo" src="images/logo-new.png"/></a>
 			            </div>			
 			                        
 			            <!-- Collect the nav links, forms, and other content for toggling -->
@@ -90,7 +90,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			
 			<!-- =================================================================================================================================== -->
 			<div class="container-fluid" style="margin-left: 35px; margin-right: 35px;">
-				<h2 class="text-h2-lightblue" style=" margin-bottom: 20px; margin-top: 10px; "><a class="sidebar-a" href="http://vlabs.ac.in/civil-engineering-labs.html">Civil Engineering</a><br/></h2>
+				<h2 class="text-h2-lightblue" style=" margin-bottom: 20px; margin-top: 10px; "><a class="sidebar-a" href="http://vlab.co.in/broad-area-civil-engineering">Civil Engineering</a><br/></h2>
 					
 					<div class="row">
 						<div class="col-md-2 sidebar-col-2">
@@ -217,5 +217,6 @@ In this virtual structural dynamics laboratory, the student will perform tests o
 	});
 	</script>
 	
+
 
 </body><!-- jQuery --></html>
