--- a/src/lab/exp4/Manual.html
+++ b/src/lab/exp4/Manual.html
@@ -105,12 +105,12 @@ Start the experiment with default values of mass and stiffness of SDOF for 'Step
 In this stage, user can be allowed to change the type of force and force value along with damping value. Observe the response of SDOF with different types of forces.<br/><br/>
 <strong>Stage 2: </strong><br/>
 User can change all the dimensions related to mass and stiffness of SDOF along with force type and damping values. Observe the response of SDOF by changing all the parameters. 
-<br/><br/><br/><br/><br/><br/></p>
-<p><br/><br/>
+<br/></p>
+<p><br/>
 <!-- <a href="Responce spectrum.htm" target="_blank">Go to Manual view on Impulse Response of S.D.O.F system(Click here)</a><br><br>
 </br></br></br></br> -->
-<a>Manual view on Impulse Response of S.D.O.F system is under construction</a><br/><br/>
-<br/><br/><br/><br/></p>
+<a>Manual view on Impulse Response of S.D.O.F system is under construction</a><br/>
+</p>
 </div>						</div>
 					</div>
 			</div>
