--- a/src/lab/exp1/Feedback.html
+++ b/src/lab/exp1/Feedback.html
@@ -103,7 +103,7 @@
 							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Introduction </h3> </a>
 						<a class="sidebar-a" href="Theory.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
 							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Theory </h3> </a>
-						<a class="sidebar-a" href="Objectives.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
+						<a class="sidl=ebar-a" href="Objectives.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
 							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Objectives </h3> </a>
 						<a class="sidebar-a" href="Manual.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
 							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Manual </h3> </a>
@@ -121,15 +121,22 @@
 						<!--edit -->
 						<h1 class="text-h1-lightblue">Simple Harmonic Oscillator</h1>
 						<div> 
-							<p><b>Dear User</b>,</p> 
-							<p>                 Thanks for using Virtual Labs. Your opinion is valuable to us. To help us improve, we'd like to ask you a few questions about your experience. It will only take 3 minutes and your answers will help us                 make Virtual Labs better for you and other users.               </p> 
-							<br/>
-							<a href="http://209.211.220.205/feedback/feedback.html" id="feedback-btn-link"> 
-								<button class="btn btn-default btn-lg" id="feedback-btn" type="button">Share Your Experience</button>               </a> 
-							<br/>
-							<br/>
-							<p>                 Thanks for your time !
-								<br/>                 <b>The Virtual Labs Team</b>               </p>             </div>
+							<p><b>Dear User</b>,</p>
+
+                            <p>Thanks for using Virtual Labs. Your opinion is valuable to us. To help us improve, we'd like to ask you a few questions about your experience. It will only take 3 minutes and your answers will help us make Virtual Labs better for you and other users.
+                            </p>
+                            <br/>
+
+                            <a href="http://209.211.220.205/feedback/feedback.html" id="feedback-btn-link">
+                                <button class="btn btn-default btn-lg" id="feedback-btn" type="button">Share Your Experience</button>
+                            </a>
+                            <br/>
+                            <br/>
+
+                            <p>Thanks for your time !
+                                <br/>
+                                <b>The Virtual Labs Team</b>
+</p>          </div>
 					</div>
 				</div>
 			</div>
