replaced vlead logo and list of exps page

--- a/src/lab/List of experiments.html
+++ b/src/lab/List of experiments.html
@@ -43,7 +43,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			                    <span class="icon-bar" style="background-color: #77BB41"></span>
 			                    <span class="icon-bar" style="background-color: #77BB41"></span>
 			                </button>
-			                <a class="navbar-brand main-logo-a" href="http://vlab.co.in"><img class="img-responsive main-logo" src="images/logo-new.png"/></a>
+			                <a class="navbar-brand main-logo-a" href="http://vlab.co.in"><img class="img-responsive main-logo" src="images/vlabs-color-small-moe.jpg"/></a>
 			            </div>			
 			                        
 			            <!-- Collect the nav links, forms, and other content for toggling -->
@@ -101,21 +101,21 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							
 							<!--edit -->
 <h1 class="text-h1-lightblue">Welcome to Structural Dynamics lab!</h1><div>
-<ul id="list-of-experiments">
+<ol id="list-of-experiments">
 <li>
 <!--Link and name of the experiment 1 -->
-<a href="exp1/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Simple Harmonic Oscillator</a><br/><br/><br/></li>
-<li><a href="exp2/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Free Vibration of S.D.O.F System</a><br/><br/><br/></li>
-<li><a href="exp3/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Forced Vibration of S.D.O.F System</a><br/><br/><br/></li>
-<li><a href="exp4/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Impulse Response of S.D.O.F System</a><br/><br/><br/></li>
-<li><a href="exp5/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Concept of Response Spectrum</a><br/><br/><br/></li>
-<li><a href="exp6/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Vibration of M.D.O.F System</a><br/><br/><br/></li>
-<li><a href="exp7/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Behaviour of Rigid Blocks</a><br/><br/><br/></li>
-<li><a href="exp8/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Torsional Response of Building</a><br/><br/><br/></li>
-<li><a href="exp9/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Continuous Systems</a><br/><br/><br/></li>
+<a href="exp1/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Simple Harmonic Oscillator</a><br/></li>
+<li><a href="exp2/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Free Vibration of S.D.O.F System</a><br/></li>
+<li><a href="exp3/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Forced Vibration of S.D.O.F System</a><br/></li>
+<li><a href="exp4/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Impulse Response of S.D.O.F System</a><br/></li>
+<li><a href="exp5/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Concept of Response Spectrum</a><br/></li>
+<li><a href="exp6/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Vibration of M.D.O.F System</a><br/></li>
+<li><a href="exp7/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Behaviour of Rigid Blocks</a><br/></li>
+<li><a href="exp8/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Torsional Response of Building</a><br/></li>
+<li><a href="exp9/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Continuous Systems</a><br/></li>
 <li><a href="exp10/Introduction.html?domain=Civil Engineering&amp;lab=Welcome to Structural Dynamics lab!">Vibration Control</a>
 </li>
-</ul>
+</ol>
 </div>						</div>
 					</div>
 			</div>
