--- a/src/lab/index.html
+++ b/src/lab/index.html
@@ -95,7 +95,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<div class="row">
 						<div class="col-md-2 sidebar-col-2">
 						<!--edit1-->
-<a class="sidebar-a" href="Introduction.html?domain=Civil Engineering"> <h3 class="text-h3-darkblue" style="margin-top: 2px; color: #FF6600 !important;">Introduction</h3></a><a class="sidebar-a" href="List of experiments.html?domain=Civil Engineering"> <h3 class="text-h3-darkblue" style="margin-top: 2px;">List of experiments</h3></a><a class="sidebar-a" href="Target Audience.html?domain=Civil Engineering"> <h3 class="text-h3-darkblue" style="margin-top: 2px;">Target Audience</h3></a><a class="sidebar-a" href="Courses Aligned.html?domain=Civil Engineering"> <h3 class="text-h3-darkblue" style="margin-top: 2px;">Courses Aligned</h3></a><a class="sidebar-a" href="Prerequisites.html?domain=Civil Engineering"> <h3 class="text-h3-darkblue" style="margin-top: 2px;">Prerequisites</h3></a><a class="sidebar-a" href="Feedback.html?domain=Civil Engineering"> <h3 class="text-h3-darkblue" style="margin-top: 2px;">Feedback</h3></a>						</div>
+<a class="sidebar-a" href="Introduction.html?domain=Civil Engineering"> <h3 class="text-h3-darkblue" style="margin-top: 2px; color: #ff6600 !important;">Introduction</h3></a><a class="sidebar-a" href="List of experiments.html?domain=Civil Engineering"> <h3 class="text-h3-darkblue" style="margin-top: 2px;">List of experiments</h3></a><a class="sidebar-a" href="Target Audience.html?domain=Civil Engineering"> <h3 class="text-h3-darkblue" style="margin-top: 2px;">Target Audience</h3></a><a class="sidebar-a" href="Courses Aligned.html?domain=Civil Engineering"> <h3 class="text-h3-darkblue" style="margin-top: 2px;">Courses Aligned</h3></a><a class="sidebar-a" href="Prerequisites.html?domain=Civil Engineering"> <h3 class="text-h3-darkblue" style="margin-top: 2px;">Prerequisites</h3></a><a class="sidebar-a" href="Feedback.html?domain=Civil Engineering"> <h3 class="text-h3-darkblue" style="margin-top: 2px;">Feedback</h3></a>						</div>
 						
 						<div class="col-md-10 lab-list-col-10">
 							
@@ -107,7 +107,8 @@ Structural dynamics is a concept of structural engineering which deals with the 
 
 In this virtual structural dynamics laboratory, the student will perform tests on different types of structures for different ground motions(earthquake data). These conditions and/or constraints are designed to reinforce classroom theory, by performing required tests in this virtual lab, analyze subsequent data, and compare the results with theory. For results, graphs and tables are generated after completion of computing experiment.
 
-	  <br/><br/></p>
+	  <br/>
+	</p>
 </div>						</div>
 					</div>
 			</div>
