--- a/src/lab/exp1/Manual.html
+++ b/src/lab/exp1/Manual.html
@@ -111,7 +111,7 @@
 						<a class="sidebar-a" href="Experiment.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
 							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Experiment </h3> </a>
 						<a class="sidebar-a" href="Quizzes.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
-							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Quizzes </h3> </a>
+							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Quiz </h3> </a>
 						<a class="sidebar-a" href="Further Readings.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
 							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Further Readings </h3> </a>
 						<a class="sidebar-a" href="Feedback.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
@@ -132,7 +132,7 @@
 							<p>
 								<br/>
 								<!-- <a href="shm.htm" target="_blank">Go to Manual view on Simple Harmonic Oscillator Experiment(Click here)</a><br><br>
-</br></br></br></br> --><a>Manual video on Simple Harmonic Oscillator Experiment is under construction</a>
+</br></br></br></br> --><!-- <a>Manual video on Simple Harmonic Oscillator Experiment is under construction</a> -->
 								<br/>
 							</p>
 						</div>
