--- a/src/lab/exp2/Further Readings.html
+++ b/src/lab/exp2/Further Readings.html
@@ -96,7 +96,7 @@
 			<!-- container-fluid end for slider -->
 			<!-- =================================================================================================================================== -->
 			<div class="container-fluid" style="margin-left: 35px; margin-right: 35px;">
-				<h2 class="text-h2-lightblue" style=" margin-bottom: 20px; margin-top: 10px; "><a class="sidebar-a" href="http://vlab.co.in/broad-area-civil-engineering">Civil Engineering</a> <i aria-hidden="true" class="fa fa-angle-right" style="font-size: 30px; padding-right: 4px;"></i><a class="sidebar-a" href="../Introduction.html">Structural Dynamics Lab</a> <i aria-hidden="true" class="fa fa-angle-right" style="font-size: 30px; padding-right: 4px;"></i><a class="sidebar-a" href="../List of experiments.html">List Of Experiments</a><br/></h2>
+				<h2 class="text-h2-lightblue" style=" margin-bottom: 20px; margin-top: 10px; "><a class="sidebar-a" href="http://vlab.co.in/broad-area-civil-engineering">Civil Engineering</a> <i aria-hidden="true" class="fa fa-angle-right" style="font-size: 30px; padding-right: 4px;"></i><a class="sidebar-a" href="../Introduction.html">Structural Dynamics Lab</a> <i aria-hidden="true" class="fa fa-angle-right" style="font-size: 30px; padding-right: 4px;"></i><a class="sidebar-a" href="../List of experiments.html">Experiments</a><br/></h2>
 				<div class="row">
 					<div class="col-md-2 sidebar-col-2">
 						<a class="sidebar-a" href="Introduction.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
@@ -111,7 +111,7 @@
 						<a class="sidebar-a" href="Experiment.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
 							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Experiment </h3> </a>
 						<a class="sidebar-a" href="Quizzes.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
-							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Quizzes </h3> </a>
+							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Quiz </h3> </a>
 						<a class="sidebar-a" href="Further Readings.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
 							<h3 class="text-h3-darkblue" style="margin-top: 2px; color: #ff6600 !important;"> Further Readings </h3> </a>
 						<a class="sidebar-a" href="Feedback.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
