--- a/src/lab/exp3/Manual.html
+++ b/src/lab/exp3/Manual.html
@@ -111,7 +111,7 @@
 						<a class="sidebar-a" href="Experiment.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
 							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Experiment </h3> </a>
 						<a class="sidebar-a" href="Quizzes.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
-							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Quizzes </h3> </a>
+							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Quiz </h3> </a>
 						<a class="sidebar-a" href="Further Readings.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
 							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Further Readings </h3> </a>
 						<a class="sidebar-a" href="Feedback.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
@@ -143,7 +143,7 @@
 							<p>
 								<br/>
 								<!-- <a href="forced.htm" target="_blank">Go to Manual view on Forced Vibration of S.D.O.F system(Click here)</a><br><br>
-</br></br></br></br> --><a>Manual view on Forced Vibration of S.D.O.F system is under construction</a>
+</br></br></br></br> --><!-- <a>Manual view on Forced Vibration of S.D.O.F system is under construction</a> -->
 								<br/>
 								<br/>
 								<br/>
