--- a/src/lab/exp3/Quizzes.html
+++ b/src/lab/exp3/Quizzes.html
@@ -132,7 +132,7 @@
 						<a class="sidebar-a" href="Experiment.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
 							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Experiment </h3> </a>
 						<a class="sidebar-a" href="Quizzes.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
-							<h3 class="text-h3-darkblue" style="margin-top: 2px; color: #ff6600 !important;"> Quizzes </h3> </a>
+							<h3 class="text-h3-darkblue" style="margin-top: 2px; color: #ff6600 !important;"> Quiz </h3> </a>
 						<a class="sidebar-a" href="Further Readings.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
 							<h3 class="text-h3-darkblue" style="margin-top: 2px;"> Further Readings </h3> </a>
 						<a class="sidebar-a" href="Feedback.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
