fixed prerequisites page

--- a/src/lab/Introduction.html
+++ b/src/lab/Introduction.html
@@ -108,7 +108,7 @@ Structural dynamics is a concept of structural engineering which deals with the 
 In this virtual structural dynamics laboratory, the student will perform tests on different types of structures for different ground motions(earthquake data). These conditions and/or constraints are designed to reinforce classroom theory, by performing required tests in this virtual lab, analyze subsequent data, and compare the results with theory. For results, graphs and tables are generated after completion of computing experiment.
  <br/>
 
-<p> Please note: </p>
+<p><b> Please note:</b> </p>
 <p> - This lab requires few Software Dependencies to run the Simulations </p>
 <ol>
 <li> Adobe Flash Plugin, Java1.7, Java3D 1.5.2 (The Java 3D API enables the creation of three-dimensional graphics applications and Internet-based 3D applets)</li>
