--- a/src/lab/exp5/Experiment.html
+++ b/src/lab/exp5/Experiment.html
@@ -122,7 +122,7 @@
 						<h1 class="text-h1-lightblue">Concept of Response Spectrum</h1>
 						<div class="content" id="experiment-article-section-4-content">
 							<p>
-								<p>Make sure that you have prerequisites<a href="../Introduction.html"> installed to run experiment</p><br/>
+								<p>Make sure that you have <a href="../Introduction.html">prerequisites</a> installed to run experiment</p><br/>
 <!-- <a href="responsespectrum.avi" target="_blank">Go to Flash view on Concept of Response Spectrum(Click here)</a>
 									<br/>
 									<br/> --><a href="responsespectrum.swf" target="_blank">Go to Flash view on Concept of Response Spectrum(Click here)</a>
