--- a/src/lab/exp7/Experiment.html
+++ b/src/lab/exp7/Experiment.html
@@ -122,7 +122,7 @@
 						<h1 class="text-h1-lightblue">Behaviour of Rigid Blocks</h1>
 						<div class="content" id="experiment-article-section-4-content">
 							<p>
-								<p>Make sure that you have prerequisites<a href="../Introduction.html"> installed to run experiment</p><br/>
+								<p>Make sure that you have <a href="../Introduction.html">prerequisites</a> installed to run experiment</p><br/>
 <a href="dem.htm" target="_blank">Go to Flash view on Behaviour of Rigid Blocks(Click here)</a>
 									<br/>
 									<!-- <a href="ve_shakebody.html" target="_blank">Go to Virtual lab on Behaviour of Rigid Blocks(Click here)</a> -->
