--- a/src/lab/exp9/Further Readings.html
+++ b/src/lab/exp9/Further Readings.html
@@ -123,7 +123,7 @@
 						<div class="content" id="experiment-article-section-8-content">
 							<ul>
 								<li> Watanabe, T., Forced vibration of continuous system with nonlinear boundary conditions , ASME Journal of Mechanical Design 100, 1978, 487 491 </li>
-								<li> âDynamics of structuresâ by Anil K chopra. </li>
+								<li>Dynamics of structures by Anil K chopra. </li>
 								<li> Aoki, S. and Watanabe, T., Forced vibration of continuous system with unsymmetrical hysteresis loop characteristics , in Proceedings of Asia-Pacific Vibration Conference 93, Vol. 4, Japan Society of Mechanical Engineers, 1993, pp. 1680 1685. </li>
 							</ul>
 						</div>
