--- a/src/lab/exp1/Experiment.html
+++ b/src/lab/exp1/Experiment.html
@@ -122,7 +122,7 @@
 						<h1 class="text-h1-lightblue">Simple Harmonic Oscillator</h1>
 						<div class="content" id="experiment-article-section-4-content">
 							<p>
-								<p>Make sure that you have prerequisites<a href="../Introduction.html"> installed to run experiment</p>	
+								<p>Make sure that you have <a href="../Introduction.html">prerequisites</a> installed to run experiment</p>	
 	<br/>
 <a href="exp1.html" target="_blank">Go to Flash view on Simple Harmonic Oscillator Experiment(Click here)</a>
 									<!-- <a href="ve_pendulum.html" target="_blank">Go to Virtual lab on Simple Harmonic Oscillator Experiment(Click here)</a> --></p>
