--- a/src/lab/exp1/Further Readings.html
+++ b/src/lab/exp1/Further Readings.html
@@ -96,7 +96,7 @@
 			<!-- container-fluid end for slider -->
 			<!-- =================================================================================================================================== -->
 			<div class="container-fluid" style="margin-left: 35px; margin-right: 35px;">
-				<h2 class="text-h2-lightblue" style=" margin-bottom: 20px; margin-top: 10px; "><a class="sidebar-a" href="http://vlab.co.in/broad-area-civil-engineering">Civil Engineering</a> <i aria-hidden="true" class="fa fa-angle-right" style="font-size: 30px; padding-right: 4px;"></i><a class="sidebar-a" href="../Introduction.html">Structural Dynamics Lab</a> <i aria-hidden="true" class="fa fa-angle-right" style="font-size: 30px; padding-right: 4px;"></i>color: #FF6600 !important;<a class="sidebar-a" href="../List of experiments.html">Experiments</a><br/></h2>
+				<h2 class="text-h2-lightblue" style=" margin-bottom: 20px; margin-top: 10px; "><a class="sidebar-a" href="http://vlab.co.in/broad-area-civil-engineering">Civil Engineering</a> <i aria-hidden="true" class="fa fa-angle-right" style="font-size: 30px; padding-right: 4px;"></i><a class="sidebar-a" href="../Introduction.html">Structural Dynamics Lab</a> <i aria-hidden="true" class="fa fa-angle-right" style="font-size: 30px; padding-right: 4px;"></i><a class="sidebar-a" href="../List o f experiments.html">Experiments</a><br/></h2>
 				<div class="row">
 					<div class="col-md-2 sidebar-col-2">
 						<a class="sidebar-a" href="Introduction.html?domain=Structural Dynamics lab&amp;lab=Civil Engineering">
@@ -123,8 +123,8 @@
 						<div class="content" id="experiment-article-section-8-content">
 							<ul>
 								<li> <a href="http://en.wikipedia.org/wiki/Simple_harmonic_motion">http://en.wikipedia.org/wiki/Simple_harmonic_motion</a> </li>
-								<li> <a href="http://www.physics.uoguelph.ca/tutorials/shm/Q.shm.html">http://www.physics.uoguelph.ca/tutorials/shm/Q.shm.html</a> </li>
-								<li> <a href="http://surendranath.tripod.com/Applets/Oscillations/SHM/SHMApplet.html">http://surendranath.tripod.com/Applets/Oscillations/SHM/SHMApplet.html</a> </li>
+								<!-- <li> <a href="http://www.physics.uoguelph.ca/tutorials/shm/Q.shm.html">http://www.physics.uoguelph.ca/tutorials/shm/Q.shm.html</a> </li>
+								<li> <a href="http://surendranath.tripod.com/Applets/Oscillations/SHM/SHMApplet.html">http://surendranath.tripod.com/Applets/Oscillations/SHM/SHMApplet.html</a> </li> -->
 								<li> “Dynamics of structures” by Anil K chopra. </li>
 							</ul>
 						</div>
