--- a/src/lab/exp2/Experiment.html
+++ b/src/lab/exp2/Experiment.html
@@ -122,7 +122,7 @@
 						<h1 class="text-h1-lightblue">Free vibration of S.D.O.F system</h1>
 						<div class="content" id="experiment-article-section-4-content">
 							<p>
-								<p>Make sure that you have prerequisites<a href="../Introduction.html"> installed to run experiment</p><br/>
+								<p>Make sure that you have <a href="../Introduction.html">prerequisites</a> installed to run experiment</p><br/>
 									<a href="undamped_freevib.html" target="_blank">Go to Flash view on Free Vibration of S.D.O.F system - Undamped Free Vibration(Click here)</a>
 									<br/> 
 									<a href="dampedfree.html" target="_blank">Go to Flash view on Free Vibration of S.D.O.F system - Damped Free Vibration(Click here)</a>
