--- a/src/lab/exp4/Experiment.html
+++ b/src/lab/exp4/Experiment.html
@@ -122,7 +122,7 @@
 						<h1 class="text-h1-lightblue">Impulse Response of S.D.O.F system</h1>
 						<div class="content" id="experiment-article-section-4-content">
 							<p>
-								<p>Make sure that you have prerequisites<a href="../Introduction.html"> installed to run experiment</p><br/>
+								<p>Make sure that you have <a href="../Introduction.html">prerequisites</a> installed to run experiment</p><br/>
 <a href="Impluse.html" target="_blank">Go to Flash view on Impulse Response of S.D.O.F system(Click here)</a>
 									<br/>
 									<!-- <a href="ve_impulse.html" target="_blank">Go to Virtual lab on Impulse Response of S.D.O.F system(Click here)</a> -->
