--- a/src/lab/exp8/Experiment.html
+++ b/src/lab/exp8/Experiment.html
@@ -122,7 +122,7 @@
 						<h1 class="text-h1-lightblue">Torsional Response of Building</h1>
 						<div class="content" id="experiment-article-section-4-content">
 							<p>
-								<p>Make sure that you have prerequisites<a href="../Introduction.html"> installed to run experiment</p><br/>
+								<p>Make sure that you have <a href="../Introduction.html">prerequisites</a> installed to run experiment</p><br/>
 <a href="torsion6.html" target="_blank">Go to Flash view on Torsional Response of Building(Click here)</a>
 									<br/>
 									<br/>
